--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   merge_build_host: True  # [win]
-  number: 1
+  number: 2
   noarch: generic
   rpaths:
     - lib/R/lib/
@@ -52,13 +52,14 @@ test:
     - tests/testthat/
     - tests/testthat.R
   commands:
-    - $R -e "library('bundle')"                                                                 # [not win]
-    - $R -e "testthat::test_file('tests/testthat.R', c('location', 'check', 'fail'))"           # [not win]
-    - "\"%R%\" -e \"library('bundle')\""                                                        # [win]
-    - "\"%R%\" -e \"testthat::test_file('tests/testthat.R', c('location', 'check', 'fail'))\""  # [win]
+    - $R -e "library('bundle')"                                                       # [not win]
+    - $R -e "testthat::test_file('tests/testthat.R', stop_on_failure=TRUE)"           # [not win]
+    - "\"%R%\" -e \"library('bundle')\""                                              # [win]
+    - "\"%R%\" -e \"testthat::test_file('tests/testthat.R', stop_on_failure=TRUE)\""  # [win]
 
 about:
-  home: https://github.com/rstudio/bundle, https://rstudio.github.io/bundle/
+  home: https://rstudio.github.io/bundle/
+  dev_url: https://github.com/rstudio/bundle
   license: MIT
   summary: Typically, models in 'R' exist in memory and can be saved via regular 'R' serialization.
     However, some models store information in locations that cannot be saved using 'R'
@@ -73,4 +74,3 @@ about:
 extra:
   recipe-maintainers:
     - conda-forge/r
-    - mfansler
