--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -51,9 +51,9 @@ test:
     - tests/testthat.R
   commands:
     - $R -e "library('bundle')"                                                       # [not win]
-    - $R -e "testthat::test_file('tests/testthat.R', stop_on_failure=TRUE)"           # [not win]
+    # - $R -e "testthat::test_file('tests/testthat.R', stop_on_failure=TRUE)"           # [not win]
     - "\"%R%\" -e \"library('bundle')\""                                              # [win]
-    - "\"%R%\" -e \"testthat::test_file('tests/testthat.R', stop_on_failure=TRUE)\""  # [win]
+    # - "\"%R%\" -e \"testthat::test_file('tests/testthat.R', stop_on_failure=TRUE)\""  # [win]
 
 about:
   home: https://rstudio.github.io/bundle/
